<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

   <!-- <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:background="@color/bg">-->

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bg"
            >
            <include
                android:id="@+id/toolBar"
                layout="@layout/layout_toolbar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layoutUserName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/standard_margin"
                android:layout_marginTop="@dimen/margin_30"
                android:layout_marginEnd="@dimen/standard_margin"
                android:background="@drawable/ic_rectangle"
                android:padding="@dimen/standard_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/toolBar">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_20"
                    android:background="@null"
                    android:hint="@string/hint_enter_name"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/white"
                    android:textColorHint="@color/cyan"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layoutPhoneNumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/standard_margin"
                android:layout_marginTop="@dimen/standard_margin"
                android:layout_marginEnd="@dimen/standard_margin"
                android:background="@drawable/ic_rectangle"
                android:padding="@dimen/standard_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layoutUserName">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etPhoneNumber"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_20"
                    android:background="@null"
                    android:hint="@string/hint_phn_number"
                    android:inputType="number"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/white"
                    android:textColorHint="@color/cyan"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardMap"
                style="@style/CardViewStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/standard_margin"
                android:layout_marginTop="@dimen/standard_margin"
                android:layout_marginEnd="@dimen/standard_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layoutPhoneNumber">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.sumi.contactbook.views.TextViewNormal
                        android:id="@+id/tvSetAddress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_20"
                        android:layout_marginTop="@dimen/margin_20"
                        android:text="@string/txt_set_address"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textColor="@color/cyan"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.fragment.app.FragmentContainerView
                        android:id="@+id/flMap"
                        android:name="com.google.android.gms.maps.SupportMapFragment"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_margin="@dimen/margin_20"
                        app:layout_constraintDimensionRatio="h,1:1"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tvSetAddress" />

                    <com.sumi.contactbook.views.TextViewNormal
                        android:id="@+id/tvAddress"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_20"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textColor="@color/cyan"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/flMap"
                        tools:text="Location: Danforth And Coxwell Avenue, Toronto,, Canada." />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

                <com.sumi.contactbook.views.TextViewNormal
                    android:id="@+id/btnSave"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="@dimen/margin_20"
                    android:text="@string/txt_save"
                    android:textColor="@color/white"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cardMap"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:background="@drawable/btn_rectangle"
                    />

        </androidx.constraintlayout.widget.ConstraintLayout>
<!--    </androidx.core.widget.NestedScrollView>-->
</layout>